update portfolio website

--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ tiles-count: 6
 socials:
   GitHub: https://github.com/changminbark
   GitLab:
-  Google-Plus: 
-  Instagram: https://www.instagram.com/changminbark
+  Google-Plus:
+  Instagram:
   LinkedIn: https://www.linkedin.com/in/chang-min-bark-0091b7b9/
   Twitter: https://twitter.com/changmin_bark
-  Facebook: https://www.facebook.com/bark.changmin
+  Facebook:
   Slack:
 
 # build settings
